--- a/my-app/src/components/Nav/Nav.module.css
+++ b/my-app/src/components/Nav/Nav.module.css
@@ -4,13 +4,19 @@ light-lila1: #E5D9F2;
 light-lila2: #CDC1FF;
 lila: #A594F9;
 purple: #7371FC;
-purple-canva: #8A3FD1;
+purple-canva1: #8A3FD1;
 __
-purple: #4C36BB
+purple-canva2: #4C36BB
 dark purple: #O91E51
 gray: #99AECD
 blue: #1DBEF5
 light: #DFEBF7
+__
+light: #F4EFFA;
+light-lila1: #C8B1E4;
+lila: #9B72CF;
+purple: #532B88;
+dark-purple: #2F184B;
 */
 
 .navbar {
@@ -19,14 +25,30 @@ light: #DFEBF7
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 3px 5%;
 }
 
 .logo-container {
   cursor: pointer;
+  margin-left: 5%;
 }
 
 .logo {
   width: 150px;
   display: block;
+}
+
+.links-container {
+  display: flex;
+  width: 300px;
+  justify-content: space-around;
+  margin-right: 5%;
+}
+
+.link {
+  text-decoration: none;
+  color: #4c36bb;
+}
+
+.link:hover {
+  color: #1dbef5;
 }
