--- a/my-app/src/components/Nav/Nav.module.css
+++ b/my-app/src/components/Nav/Nav.module.css
@@ -1,24 +1,3 @@
-/*
-light: #F5EFFF;
-light-lila1: #E5D9F2;
-light-lila2: #CDC1FF;
-lila: #A594F9;
-purple: #7371FC;
-purple-canva1: #8A3FD1;
-__
-purple-canva2: #4C36BB
-dark purple: #O91E51
-gray: #99AECD
-blue: #1DBEF5
-light: #DFEBF7
-__
-light: #F4EFFA;
-light-lila1: #C8B1E4;
-lila: #9B72CF;
-purple: #532B88;
-dark-purple: #2F184B;
-*/
-
 .navbar {
   width: 100%;
   background: #f5efff;
@@ -35,6 +14,7 @@ dark-purple: #2F184B;
 .logo {
   width: 150px;
   display: block;
+  background: #f5efff;
 }
 
 .links-container {
@@ -42,11 +22,13 @@ dark-purple: #2F184B;
   width: 300px;
   justify-content: space-around;
   margin-right: 5%;
+  background: #f5efff;
 }
 
 .link {
   text-decoration: none;
   color: #4c36bb;
+  background: #f5efff;
 }
 
 .link:hover {
