--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,15 +1,22 @@
 /*
-light: #F5EFFF;
+this dark: 170A1C, #070070A, #090C08, #272727,  
+paradise pink: #F0386B
+this purple-canva2: #4C36BB
+this lila: #9984d4
+this blue: #1DBEF5
+this light: #F5EFFF
+__
+this light: #F5EFFF;
 light-lila1: #E5D9F2;
 light-lila2: #CDC1FF;
 lila: #A594F9;
 purple: #7371FC;
 purple-canva1: #8A3FD1;
 __
-purple-canva2: #4C36BB
+this purple-canva2: #4C36BB
 dark purple: #O91E51
 gray: #99AECD
-blue: #1DBEF5
+this blue: #1DBEF5
 light: #DFEBF7
 __
 light: #F4EFFA;
