--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,34 +1,16 @@
-/*
-this dark: 170A1C, #070070A, #090C08, #272727,  
-paradise pink: #F0386B
-this purple-canva2: #4C36BB
-this lila: #9984d4
-this blue: #1DBEF5
-this light: #F5EFFF
-__
-this light: #F5EFFF;
-light-lila1: #E5D9F2;
-light-lila2: #CDC1FF;
-lila: #A594F9;
-purple: #7371FC;
-purple-canva1: #8A3FD1;
-__
-this purple-canva2: #4C36BB
-dark purple: #O91E51
-gray: #99AECD
-this blue: #1DBEF5
-light: #DFEBF7
-__
-light: #F4EFFA;
-light-lila1: #C8B1E4;
-lila: #9B72CF;
-purple: #532B88;
-dark-purple: #2F184B;
-*/
+:root {
+  --main-bg-color: #4c36bb;
+  --secondary: #9984d4;
+  --light-text-color: #f5efff;
+  --dark-text-color: #230c33;
+  --highlight-blue: #1dbef5;
+  --highlight-purple: #592e83;
+}
 
 * {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-  background-color: #4c36bb;
+  background-color: var(--main-bg-color);
   box-sizing: border-box;
+  color: var(--light-text-color);
 }
