--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -10,7 +10,10 @@
 * {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-  background-color: var(--main-bg-color);
   box-sizing: border-box;
+}
+
+body {
+  background-color: var(--main-bg-color);
   color: var(--light-text-color);
 }
