--- a/my-app/src/components/Nav/Nav.module.css
+++ b/my-app/src/components/Nav/Nav.module.css
@@ -4,6 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
 .logo-container {
