--- a/my-app/src/components/pages/About/About.module.css
+++ b/my-app/src/components/pages/About/About.module.css
@@ -2,7 +2,11 @@
   color: #f5efff;
   margin: 0 auto;
   text-align: center;
-  /* padding: 1% 0 2% 0; */
+}
+
+.about-body {
+  padding-top: 1%;
+  padding-bottom: 3%;
 }
 
 .about-header-container {
@@ -14,42 +18,31 @@
   padding-bottom: 1%;
 }
 
-.intro-container {
-  background-color: var(--highlight-blue);
-  padding: 2% 0 4% 0;
-  width: 100%;
-}
-
 .hi-text {
   font-size: 1.2rem;
+  padding-top: 2%;
   padding-bottom: 1%;
 }
 
 .name {
   font-weight: 600;
-  font-size: 1.5rem;
-  color: var(--main-bg-color);
+  font-size: 2rem;
+  color: var(--highlight-blue);
 }
 
 .profile {
-  width: 30%;
+  width: 25%;
   border-radius: 3%;
   margin-top: 1%;
   margin-bottom: 1%;
 }
 
-.about-me-text {
-  text-align: center;
-  margin: 0 auto;
-  width: 60%;
-  font-size: 1rem;
-  color: var(--light-text-color);
-}
-
 .question {
-  margin-top: 3%;
-  margin-bottom: 1%;
   font-size: 1.5rem;
+  width: 60%;
+  margin: 0 auto;
+  padding-top: 3%;
+  padding-bottom: 1%;
 }
 
 .intro-text {
@@ -59,7 +52,15 @@
   font-size: 1rem;
 }
 
-.intro-text p,
-.about-me-text p {
+.intro-text p {
   padding-bottom: 1%;
+}
+
+.intro-text a {
+  color: var(--highlight-blue);
+  cursor: pointer;
+}
+
+.intro-text a:hover {
+  color: var(--secondary);
 }
