--- a/my-app/src/components/Nav/Nav.module.css
+++ b/my-app/src/components/Nav/Nav.module.css
@@ -6,6 +6,7 @@
   justify-content: space-between;
   padding-top: 1%;
   padding-bottom: 1%;
+  border-bottom: 6px solid var(--highlight-blue);
 }
 
 .logo-container {
