--- a/my-app/src/components/Nav/Nav.module.css
+++ b/my-app/src/components/Nav/Nav.module.css
@@ -7,6 +7,11 @@
   padding-top: 1%;
   padding-bottom: 1%;
   border-bottom: 6px solid var(--highlight-blue);
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
 }
 
 .logo-container {
