--- a/my-app/src/components/pages/Learn/Learn.module.css
+++ b/my-app/src/components/pages/Learn/Learn.module.css
@@ -17,3 +17,10 @@
   width: 40%;
   padding-bottom: 1%;
 }
+.videos-container {
+  background-color: black;
+}
+
+.video-title {
+  color: var(--highlight-blue);
+}
