Add htmlJSON data and style to resource divs

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -2,7 +2,9 @@
   --main-bg-color: #4c36bb;
   --secondary: #9984d4;
   --light-text-color: #f5efff;
+  /* --light-text-color: #dfebf7; */
   --dark-text-color: #230c33;
+  /* --dark-text-color: #091e51; */
   --highlight-blue: #1dbef5;
   --highlight-purple: #592e83;
 }
