--- a/my-app/src/components/pages/Learn/Learn.module.css
+++ b/my-app/src/components/pages/Learn/Learn.module.css
@@ -1,6 +1,7 @@
 .learn-section {
   margin: 0 auto;
   text-align: center;
+  background-color: var(--main-bg-color);
 }
 
 .learn-body {
@@ -18,30 +19,80 @@
 }
 /*Grouped resources container*/
 .resources-container {
-  border: 2px solid var(--secondary);
-  background-color: var(--dark-text-color);
-  width: 80%;
+  border: 2px solid var(--dark-text-color);
+  background-color: var(--light-text-color);
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 2%;
+}
+.resources-container h1 {
+  padding: 0.5% 0;
+  color: var(--main-bg-color);
+}
+
+/*Grouped resources container without h1*/
+.resource-details-container {
+  /* border: 1px solid red; */
+  border-top: 2px solid var(--dark-text-color);
+  background-color: var(--highlight-blue);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 /*Single resource container*/
-.resource {
-  width: 30%;
+.resource-details {
+  width: 31%;
+  border: 1px solid var(--dark-text-color);
+  margin: 1%;
+  display: flex;
+  flex-direction: row;
+  background-color: var(--light-text-color);
 }
+
 /*Resource details*/
-.resource-img {
-  width: 30%;
-  border: 1px solid var(--light-text-color);
+.resource-graphic {
+  width: 40%;
+  height: auto;
+  margin: 0 auto;
+}
+.resource-text {
+  /* border: 1px solid orange; */
+  width: 80%;
+  padding: 2%;
+  text-align: left;
 }
 .resource-title {
-  color: var(--secondary);
+  /* border: 1px solid pink; */
+  color: var(--dark-text-color);
+  font-size: 0.8rem;
+  padding: 1% 0;
+  /* margin: 0 auto; */
+}
+.resource-by {
+  color: var(--highlight-purple);
+  border-bottom: 1px solid;
+  margin-bottom: 1%;
+  font-size: 0.75rem;
+  padding-bottom: 1%;
 }
 .resource-description {
-  color: var(--light-text-color);
+  /* border: 1px solid blue; */
+  color: var(--dark-text-color);
+  /* margin: 0 auto; */
+  font-size: 0.7rem;
+  padding: 1% 0;
+}
+.resource-categories {
+  color: var(--highlight-blue);
+  font-size: 0.65rem;
+  /* margin: 0 auto; */
 }
 .resource-btn {
   cursor: pointer;
   background-color: var(--highlight-blue);
   border: 1px solid var(--light-text-color);
   border-radius: 5%;
+  margin: 0 auto;
 }
 .resource-btn:hover {
   background-color: var(--main-bg-color);
