--- a/my-app/src/components/pages/Hero/Hero.module.css
+++ b/my-app/src/components/pages/Hero/Hero.module.css
@@ -5,9 +5,10 @@
   height: 100vh;
   width: 100vw;
   object-fit: cover;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
+  z-index: -1;
 }
 .hero-text {
   position: absolute;
