--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,12 +1,19 @@
 :root {
   --main-bg-color: #4c36bb;
-  --secondary: #9984d4;
-  --light-text-color: #f5efff;
+  --secondary: #0089f6;
+  --light-text-color: #56fbdb;
+  --dark-text-color: #4a4453;
+  --highlight-blue: #00c7f3;
+  --highlight-purple: #c39bff;
+  --white: #fbfcfa;
+  --black: #030104;
   /* --light-text-color: #dfebf7; */
-  --dark-text-color: #230c33;
+  /* --dark-text-color: #230c33; */
+  /* --secondary: #9984d4; */
   /* --dark-text-color: #091e51; */
-  --highlight-blue: #1dbef5;
-  --highlight-purple: #592e83;
+  /* --highlight-blue: #1dbef5; */
+  /* --light-text-color: #f5efff; */
+  /* --highlight-purple: #592e83; */
 }
 
 * {
@@ -20,4 +27,8 @@
 body {
   background-color: var(--main-bg-color);
   color: var(--light-text-color);
+}
+
+.main-wrapper {
+  background-color: red;
 }
