--- a/my-app/src/components/Nav/Nav.module.css
+++ b/my-app/src/components/Nav/Nav.module.css
@@ -1,12 +1,11 @@
 .navbar {
   width: 100%;
-  background: #f5efff;
+  background: var(--white);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 0.5%;
-  padding-bottom: 0.5%;
-  border-bottom: 6px solid var(--highlight-blue);
+  padding-top: 0.3%;
+  padding-bottom: 0.3%;
   position: sticky;
   top: 0;
   left: 0;
@@ -20,25 +19,22 @@
 }
 
 .logo {
-  width: 150px;
+  width: 40%;
   display: block;
-  background: #f5efff;
 }
 
 .links-container {
   display: flex;
-  width: 300px;
+  width: 25%;
   justify-content: space-around;
-  margin: 0 5% 0 3%;
-  background: #f5efff;
+  margin-right: 5%;
 }
 
 .link {
   text-decoration: none;
-  color: #4c36bb;
-  background: #f5efff;
+  color: var(--main-ic-color);
 }
 
 .link:hover {
-  color: #1dbef5;
+  color: var(--dark-text-color);
 }
