--- a/my-app/src/components/Nav/Nav.module.css
+++ b/my-app/src/components/Nav/Nav.module.css
@@ -23,18 +23,25 @@
   display: block;
 }
 
-.links-container {
+.links-wrapper {
   display: flex;
-  width: 25%;
+  align-content: right;
   justify-content: space-around;
   margin-right: 5%;
+  width: 60%;
+  border: 1px solid red;
 }
 
-.link {
+.link-container {
   text-decoration: none;
   color: var(--main-ic-color);
+  border: 1px solid green;
+  width: 18%;
+  text-align: center;
 }
-
+.link {
+  color: blue;
+}
 .link:hover {
-  color: var(--highlight-purple);
+  opacity: 0.7;
 }
