--- a/my-app/src/components/Nav/Nav.module.css
+++ b/my-app/src/components/Nav/Nav.module.css
@@ -25,23 +25,19 @@
 
 .links-wrapper {
   display: flex;
-  align-content: right;
-  justify-content: space-around;
+  justify-content: flex-end;
   margin-right: 5%;
-  width: 60%;
-  border: 1px solid red;
 }
 
 .link-container {
-  text-decoration: none;
-  color: var(--main-ic-color);
-  border: 1px solid green;
-  width: 18%;
   text-align: center;
+  margin-left: 1rem;
 }
 .link {
-  color: blue;
+  color: var(--main-ic-color);
+  text-decoration: none;
+  font-weight: 500;
 }
 .link:hover {
-  opacity: 0.7;
+  opacity: 0.6;
 }
