--- a/my-app/src/components/pages/Blog/Blog.module.css
+++ b/my-app/src/components/pages/Blog/Blog.module.css
@@ -10,9 +10,9 @@
 }
 
 .blog-header-container {
-  background-color: var(--secondary);
+  /* background-color: var(--secondary); */
 }
 
 .blog-title {
-  width: 30%;
+  width: 40%;
 }
