--- a/my-app/src/components/Nav/Nav.module.css
+++ b/my-app/src/components/Nav/Nav.module.css
@@ -28,10 +28,15 @@
   justify-content: flex-end;
   margin-right: 5%;
 }
-
 .link-container {
+  cursor: pointer;
   text-align: center;
   margin-left: 1rem;
+  margin-top: 1px;
+  border-top: 3px solid var(--highlight-aqua);
+}
+.link-container:hover {
+  border-top: 3px solid var(--main-ic-color);
 }
 .link {
   color: var(--main-ic-color);
@@ -39,5 +44,6 @@
   font-weight: 500;
 }
 .link:hover {
-  opacity: 0.6;
+  color: var(--dark-text-color);
+  opacity: 0.8;
 }
