--- a/my-app/src/components/pages/About/About.module.css
+++ b/my-app/src/components/pages/About/About.module.css
@@ -5,11 +5,12 @@
 }
 .about-body {
   padding-top: 0;
-  background-color: var(--main-ic-color);
+  background-image: linear-gradient(to top, #56fbdb, #9dfbd4, #c8fbd8, #e7fbe5, #fbfcfa);
+  color: var(--dark-text-color);
+  padding-bottom: 4%;
 }
 .about-header-container {
   margin-top: 800px;
-  border-top: 2px solid var(--main-ic-color);
 }
 .about-title {
   display: block;
@@ -18,13 +19,13 @@
 }
 .hi-text {
   font-size: 1.2rem;
-  padding-top: 2%;
+  padding-top: 3%;
   padding-bottom: 1%;
 }
 .name {
   font-weight: 600;
   font-size: 2rem;
-  color: var(--highlight-aqua);
+  color: var(--main-ic-color);
 }
 .profile {
   width: 25%;
@@ -36,7 +37,18 @@
   font-size: 1.5rem;
   width: 60%;
   margin: 0 auto;
-  padding-top: 3%;
+  padding-top: 2%;
+  padding-bottom: 1%;
+  color: var(--main-ic-color);
+}
+.first-intro-text {
+  padding-top: 1.5%;
+  text-align: center;
+  margin: 0 auto;
+  width: 60%;
+  font-size: 1rem;
+}
+.first-intro-text p {
   padding-bottom: 1%;
 }
 .intro-text {
@@ -49,9 +61,9 @@
   padding-bottom: 1%;
 }
 .intro-text a {
-  color: var(--highlight-blue);
+  color: var(--main-ic-color);
   cursor: pointer;
 }
 .intro-text a:hover {
-  color: var(--secondary);
+  opacity: 0.7;
 }
