--- a/my-app/src/components/pages/Learn/Learn.module.css
+++ b/my-app/src/components/pages/Learn/Learn.module.css
@@ -7,20 +7,20 @@
   padding-bottom: 3%;
 }
 .learn-header-text {
-  color: var(--white);
+  color: var(--dark-text-color);
 }
 .learn-title {
   width: 40%;
 }
 .learn-content {
-  background-color: var(--main-ic-color);
+  background-color: var(--white);
 }
 /*Grouped resources container*/
 .learn-topic-section {
   padding-bottom: 2%;
 }
 .resources-container {
-  border: 2px solid var(--dark-text-color);
+  border: 2px solid var(--black);
   background-color: var(--highlight-aqua);
   width: 90%;
   margin: 0 auto;
@@ -33,8 +33,8 @@
 
 /*Grouped resources container without h1*/
 .resource-details-container {
-  border-top: 2px solid var(--dark-text-color);
-  background-color: var(--black);
+  border-top: 2px solid var(--black);
+  background-color: var(--main-ic-color);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -43,7 +43,7 @@
 /*Single resource container*/
 .resource-details {
   width: 31%;
-  border: 2px solid var(--highlight-purple);
+  border: 3px solid var(--highlight-purple);
   margin: 1% 0;
   display: flex;
   flex-direction: row;
@@ -67,7 +67,7 @@
   overflow: auto;
 }
 .resource-title {
-  color: var(--black);
+  color: var(--dark-text-color);
   font-size: 0.8rem;
   padding: 1% 0;
 }
@@ -86,25 +86,6 @@
 .resource-categories {
   display: none;
 }
-/* .resource-btn {
-  cursor: pointer;
-  background-color: transparent;
-  border: 1px solid var(--highlight-purple);
-  border-radius: 10px;
-  margin: 0 auto;
-  font-size: 0.7rem;
-}
-.resource-btn:hover {
-  background-color: var(--highlight-blue);
-}
-.resource-btn a {
-  color: var(--highlight-purple);
-  text-decoration: none;
-}
-.resource-btn a:hover {
-  color: var(--light-text-color);
-} */
-
 .resource-btn {
   display: inline-block;
   padding: 0.5rem;
@@ -112,7 +93,6 @@
   border-radius: 20px;
   margin-top: 0.5rem;
   text-decoration: none;
-  /* text-transform: uppercase; */
   font-size: 0.7rem;
   font-weight: 500;
   color: var(--dark-text-color);
@@ -131,10 +111,3 @@
 /* .resource-btn a:hover {
   color: var(--light-text-color);
 }  */
-
-/*Read Counter*/
-.read-counter-text {
-  color: var(--highlight-purple);
-  font-size: 0.7rem;
-  padding: 1% 0;
-}
