--- a/my-app/src/components/Hero/Hero.module.css
+++ b/my-app/src/components/Hero/Hero.module.css
@@ -39,12 +39,15 @@
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 600;
-  color: var(--black);
+  color: var(--dark-text-color);
   text-align: center;
   transition: all 0.15s;
   cursor: pointer;
   background-color: var(--white);
+  opacity: 0.7;
 }
 .hero-btn:hover {
   background-color: var(--highlight-aqua);
+  border: 2px solid var(--dark-text-color);
+  opacity: 1;
 }
