--- a/my-app/src/components/Nav/Nav.module.css
+++ b/my-app/src/components/Nav/Nav.module.css
@@ -36,7 +36,7 @@
   border-top: 3px solid var(--highlight-aqua);
 }
 .link-container:hover {
-  border-top: 3px solid var(--black);
+  border-top: 3px solid var(--main-ic-color);
 }
 .link {
   color: var(--main-ic-color);
@@ -44,6 +44,6 @@
   font-weight: 500;
 }
 .link:hover {
-  color: var(--dark-text-color);
+  color: var(--main-ic-color);
   opacity: 0.8;
 }
