--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,18 +1,19 @@
 :root {
   --main-ic-color: #4c36bb;
-  /* --secondary: #0089f6; */
-  --highlight-aqua: #56fbdb;
-  --dark-aqua: #00c2a4;
   --highlight-purple: #b9b4ff;
+  --highlight-aqua: #79f1df;
+  --dark-aqua: #00c2a4;
   --aqua-rgba65: rgba(86, 251, 219, 0.65);
   --aqua-rgba90: rgba(86, 251, 219, 0.9);
   --dark-text-color: #4a4453;
   --light-text-color: #969a97;
-  /* --highlight-blue: #00c7f3; */
-  --highlight-pink: #f90093;
-  /* --highlight-purple: #c39bff; */
   --white: #fbfcfa;
-  --black: #000;
+  --black: #14110f;
+  /* --highlight-aqua: #56fbdb; */
+  /* --highlight-blue: #00c7f3; */
+  /* --highlight-pink: #f90093; */
+  /* --secondary: #0089f6; */
+  /* --highlight-purple: #c39bff; */
   /*#030104*/
   /* --light-text-color: #dfebf7; */
   /* --dark-text-color: #230c33; */
