--- a/my-app/src/components/Hero/Hero.module.css
+++ b/my-app/src/components/Hero/Hero.module.css
@@ -34,7 +34,7 @@
 .hero-btn {
   display: inline-block;
   padding: 0.5em 3em;
-  border: 2px solid var(--highlight-aqua);
+  border: 3px solid rgba(251, 252, 250, 0.7);
   margin-top: 1rem;
   text-decoration: none;
   text-transform: uppercase;
@@ -43,11 +43,11 @@
   text-align: center;
   transition: all 0.15s;
   cursor: pointer;
-  background-color: var(--white);
-  opacity: 0.7;
+  background-color: transparent;
 }
 .hero-btn:hover {
-  background-color: var(--highlight-aqua);
-  border: 2px solid var(--dark-text-color);
+  /* border: 3px solid var(--main-ic-color); */
+  background-color: var(--highlight-purple);
   opacity: 1;
+  color: var(--main-ic-color);
 }
