--- a/my-app/src/components/pages/About/About.module.css
+++ b/my-app/src/components/pages/About/About.module.css
@@ -5,8 +5,6 @@
 }
 .about-body {
   padding-top: 0;
-  /* background-color: var(--highlight-purple); */
-  /* background-image: linear-gradient(to top, #4c36bb, #7c67cf, #a799e1, #d2cbf1, #ffffff); */
   background-image: linear-gradient(to top, #b9b4ff, #ccc6ff, #ded9ff, #efecff, #ffffff);
   color: var(--dark-text-color);
   padding-bottom: 4%;
@@ -63,9 +61,10 @@
   padding-bottom: 1%;
 }
 .intro-text a {
-  color: var(--main-ic-color);
+  color: var(--dark-text-color);
   cursor: pointer;
+  font-weight: 500;
 }
 .intro-text a:hover {
-  opacity: 0.7;
+  opacity: 0.5;
 }
