--- a/my-app/src/components/pages/Contact/Contact.module.css
+++ b/my-app/src/components/pages/Contact/Contact.module.css
@@ -24,7 +24,7 @@
   width: 3rem;
   height: 3rem;
   background-color: var(--white);
-  border: 2px solid var(--highlight-aqua);
+  border: 2px solid var(--highlight-purple);
   border-radius: 50%;
   margin-right: 1rem;
   cursor: pointer;
@@ -39,6 +39,6 @@
   margin: 20%;
 }
 .icon-container:hover {
-  background-color: var(--highlight-aqua);
+  background-color: var(--highlight-purple);
   border: 2px solid var(--white);
 }
