--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -9,6 +9,9 @@
   --light-text-color: #969a97;
   --white: #fbfcfa;
   --black: #14110f;
+  --html-orange: #ffa500;
+  --css-blue: #264de4;
+  --js-yellow: #f7df1e;
   /* --highlight-aqua: #56fbdb; */
   /* --highlight-blue: #00c7f3; */
   /* --highlight-pink: #f90093; */
