--- a/my-app/src/components/pages/Learn/LearnJs.module.css
+++ b/my-app/src/components/pages/Learn/LearnJs.module.css
@@ -15,51 +15,34 @@
   margin: 0 auto;
   justify-content: center;
   width: 90%;
-  border: 2px solid green;
 }
 .resource-card {
   background-color: var(--white);
   border: 3px solid var(--js-yellow);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 8%;
-  margin: 1%;
+  margin: 2% 1% 3% 1%;
   width: 21%;
   overflow: hidden;
   color: var(--dark-text-color);
 }
 .resource-card:hover {
-  border: 5px solid var(--highlight-purple);
-  background-color: var(--highlight-purple);
+  border: 3px solid var(--main-ic-color);
 }
 .resource-header {
-  /* color: var(--dark-text-color); */
-  /* background-color: var(--white); */
   text-align: center;
   padding: 3%;
 }
-.resource-header:hover {
-  /* background-color: var(--main-ic-color); */
-  /* color: var(--white); */
-  /* cursor: pointer; */
-}
 .resource-title {
-  /* color: var(--dark-text-color); */
   text-decoration: none;
   padding-bottom: 1%;
 }
-.resource-title:hover {
-  /* text-decoration: underline; */
-}
 .resource-details {
   background-color: var(--js-yellow);
-  /* color: var(--white); */
   font-size: 0.85rem;
   padding: 2%;
   text-align: center;
 }
-/* .video-description {
-  color: var(--dark-text-color);
-} */
 .resource-description {
   position: absolute;
   top: 6%;
@@ -82,4 +65,38 @@
 .resource-img {
   width: 100%;
   display: block;
+}
+.doc-img {
+  width: 50%;
+  display: block;
+  margin: 0.3rem auto;
+  background-color: var(--js-yellow);
+  border-radius: 8%;
+}
+.doc-img:hover {
+  background-color: var(--highlight-purple);
+  border: 1 px solid var(--main-ic-color);
+  cursor: pointer;
+}
+.practice-description {
+  position: absolute;
+  top: 10%;
+  left: 15%;
+  transform: translate (-50%, -50%);
+  font-size: 0.78rem;
+  font-weight: 500;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 8% 5%;
+  line-height: 1.2;
+  border-radius: 1rem;
+  width: 70%;
+  color: var(--dark-text-color);
+}
+.practice-description:hover {
+  background-color: rgba(255, 255, 255, 0.9);
+  cursor: pointer;
+  /* color: var(--main-ic-color); */
+}
+.practice-img {
+  width: 70%;
 }
