--- a/my-app/src/components/pages/Learn/ReadCounter.module.css
+++ b/my-app/src/components/pages/Learn/ReadCounter.module.css
@@ -2,9 +2,9 @@
 .resource-btn {
   display: inline-block;
   padding: 0.5rem;
-  border: 2px solid var(--dark-text-color);
+  border: 1px solid var(--dark-text-color);
   border-radius: 20px;
-  margin-top: 0.3rem;
+  margin: 0.3rem 0;
   text-decoration: none;
   font-size: 0.7rem;
   font-weight: 500;
@@ -12,13 +12,12 @@
   text-align: center;
   transition: all 0.15s;
   cursor: pointer;
-  background-color: transparent;
+  background-color: rgba(185, 180, 255, 0.6);
 }
 .resource-btn:hover {
-  background-color: var(--highlight-aqua);
+  background-color: rgba(185, 180, 255, 1);
 }
 .read-counter-text {
   color: var(--dark-text-color);
   font-size: 0.7rem;
-  margin-top: 1rem;
 }
