--- a/my-app/src/components/pages/Learn/LearnHtml.module.css
+++ b/my-app/src/components/pages/Learn/LearnHtml.module.css
@@ -6,7 +6,7 @@
   width: 90%;
   text-align: center;
   padding-top: 1%;
-  border-top: 4px solid var(--js-yellow);
+  border-top: 4px solid var(--html-orange);
 }
 .resources-container {
   display: flex;
@@ -17,7 +17,7 @@
 }
 .resource-card {
   background-color: var(--white);
-  border: 3px solid var(--js-yellow);
+  border: 3px solid var(--html-orange);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 8%;
   margin: 2% 1% 3% 1%;
@@ -40,8 +40,11 @@
   width: 90%;
   margin: 0 auto;
 }
+.resource-by {
+  font-size: 0.8rem;
+}
 .resource-details {
-  background-color: var(--js-yellow);
+  background-color: var(--html-orange);
   font-size: 0.8rem;
   padding: 2%;
   text-align: center;
@@ -61,24 +64,14 @@
   width: 30%;
   margin: 0.3rem auto;
   padding: 2%;
-  border: 2px solid var(--js-yellow);
+  border: 2px solid var(--html-orange);
   border-radius: 8%;
   cursor: pointer;
 }
 .doc-img:hover {
   border: none;
-  background-color: rgba(247, 223, 30, 0.7);
+  background-color: rgb(255, 165, 0.7);
 }
 .practice-img {
-  width: 32%;
-  display: block;
-  margin: 0.3rem auto;
-  padding: 2%;
-  cursor: pointer;
-  border: 2px solid var(--js-yellow);
-  border-radius: 8%;
-}
-.practice-img:hover {
-  border: none;
-  background-color: rgba(247, 223, 30, 0.7);
+  width: 40%;
 }
